# RoveComm_CPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  generated.txt
.devcontainer/: Dockerfile  Dockerfile_Focal  Dockerfile_Jammy  Dockerfile_JetPack  Dockerfile_Ubuntu  devcontainer.json  install-cmake.sh
.github/: funding.yml
.github/workflows/: codeql.yml  deploy_rovecomm.yml  doxygen_generate.yml  manifest.yml  sync-rovecomm  sync-rovecomm.yml  tests.yml  valgrind.yml
data/: README.md
data/ASCII/: README.md  v3.txt
data/RoveComm/: manifest.json
docs/: README.md
docs/Doxygen/resources/: DoxygenLayout.xml  doxygen-awesome-sidebar-only.css  doxygen-awesome.css
src/: AutonomyThread.hpp  NetworkAddress.cpp  NetworkAddress.h  README.md  RoveComm.cpp  RoveComm.h  RoveCommEthernetUDP.cpp  RoveCommEthernetUDP.h  RoveCommGlobals.cpp  RoveCommGlobals.h  RoveCommLoggers.cpp  RoveCommLoggers.h  RoveCommLogging.cpp  RoveCommLogging.h  RoveCommManifestHandler.cpp  RoveCommManifestHandler.h  RoveCommPacket.cpp  RoveCommPacket.h  convert.cpp  convert.h  main-client.cpp  main-server.cpp  main.cpp
src/RoveComm/: Consts.h  External.h  ExternalIncludes.h  LibraryImports.h  LogHack.h  Manifest.h  ManifestTemp.h  NetworkAddress.cpp  NetworkAddress.h  NewManifest.h  Packet.h  RoveComm.cpp  RoveComm.h  RoveComm.hpp  RoveCommByteBuffer.hpp  RoveCommConstants.h  RoveCommConsts.h  RoveCommEthernetTcp.cpp  RoveCommEthernetTcp.h  RoveCommEthernetUDP.h  RoveCommEthernetUdp.cpp  RoveCommEthernetUdp.h  RoveCommGlobals.cpp  RoveCommGlobals.h  RoveCommHelpers.cpp  RoveCommHelpers.h  RoveCommManifest.h  RoveCommManifestHandler.cpp  RoveCommManifestHandler.h  RoveCommPacket.cpp  RoveCommPacket.h  RoveCommServer.cpp  RoveCommServer.h  RoveCommServerManager.cpp  RoveCommServerManager.h  RoveCommTCP.cpp  RoveCommTCP.h  RoveCommUDP.cpp  RoveCommUDP.h  RoveComm_CPP.pc.in  (+7 more)
src/interfaces/: AutonomyThread.hpp
src/util/: IPS.hpp
temp/: main2.cpp
temp/RoveComm/: RoveComm.cpp  RoveComm.h  RoveCommManifest.h  RoveCommPacket.cpp  RoveCommPacket.h
tests/: Example.cc  README.md  TestUtils.cc  TestUtils.h
tests/Integration/: README.md  main.cc
tests/Unit/: README.md  main.cc
tests/Unit/src/: tcp.cc  udp.cc
tools/: README.md
tools/RoveComm/: RoveCommManifest.h  parser.py
tools/valgrind/: README.md  run_valgrind.sh  valgrind.supp  valgrind_3rdparty.supp
